# jsk_demos

./: README.md
jsk_2019_10_spatula/: README.md
jsk_2019_10_spatula/euslisp/: scrape_filter.l
jsk_2019_10_spatula/launch/: cake_demo.launch  cake_demo_test.launch  detect_dirt.launch  detect_dirt_test.launch  force_feedback.launch  hsi_test.launch
jsk_2019_10_spatula/python/: analyze_effort.py  compare_force.py  merge_cake_new_test.py  merge_cake_test.py
jsk_2020_04_pr2_curry/: CMakeLists.txt  README.md  package.xml
jsk_2020_04_pr2_curry/cad/: PR2_Gripper_CL-M3-5.0-BR_202009217.SLDPRT  PR2_Gripper_CL-M3-5.0-BR_202009217.STL  PR2_Gripper_CL-M3-5.0-BR_tri_slit_202001006.SLDPRT  PR2_Gripper_CL-M3-5.0-BR_tri_slit_202001006.STL
jsk_2020_04_pr2_curry/config/: microwave_plane_rosbag_test.rviz  pr2_wrench_test.rviz  pr2_wrench_test_right.rviz  ptcloud_listener_test.rviz  shelf_plane_rosbag_test.rviz
jsk_2020_04_pr2_curry/docs/: fried-vegetables.md
jsk_2020_04_pr2_curry/euslisp/: moveit-test.l  simple-screen-point-test.l
jsk_2020_04_pr2_curry/launch/: data_collection_kinect_and_prosilica_each.launch  data_collection_prosilica.launch  tmp_data_collection_prosilica.launch
jsk_2020_04_pr2_curry/scripts/: add_two_ints_client.l  add_two_ints_server.l  my_match_template.py
jsk_2020_04_pr2_curry/src/: old_ptcloud_listener.cpp  ptcloud_listener.cpp
jsk_2020_04_pr2_curry/uml/: ih_stove.act  microwave.act  shelf.act  water.act
jsk_2020_10_egg_dishes/: CMakeLists.txt  package.xml
jsk_2020_10_egg_dishes/scripts/: googletrans_test.py  mecab_test.py  sunny-side-up.txt
jsk_2021_10_soup_from_boil/config/: pr2_tabletop.rviz
jsk_2021_10_soup_from_boil/launch/: cutting_board_top_pr2_test.launch  (+2 more)
jsk_2022_09_fridge_pi/: CMakeLists.txt  README.md  REAME.md  package.xml
jsk_2022_10_egg_dishes/: CMakeLists.txt  README.md  package.xml
jsk_2023_09_cook_from_recipe/: CMakeLists.txt  README.md  package.xml  rosinstall
jsk_teaching_object/: CMakeLists.txt  README.md  jsk_r8.rosinstall.noetic  noetic.rosinstall  package.xml  requirements.in  rosinstall
jsk_teaching_object/action/: TakeAction.action  TakeImagePhoto.action  UpdateModel.action
jsk_teaching_object/config/r8/camera/: 98-r8-camera.rules  left_hand_1600x1200.yaml  left_hand_640x480.yaml  right_hand_1600x1200.yaml  right_hand_640x480.yaml
jsk_teaching_object/launch/: 2023-03-17_all.launch  2023-09-20-all.launch  2023-11-13-all.launch  edgetpu_detection.launch  edgetpu_detection_with_depth_filter.launch  joy.launch  object_detection.launch  register_object.launch  ros_speech_recognition.launch  speech_recognition.launch
jsk_teaching_object/launch/config/: 2023-09-20.rviz
jsk_teaching_object/node_scripts/: detection_node.py  draw_rects.py  label_image_decomposer.py  object_detection.py  publish_text.py  r8_5_look.py  remove_bg_node.py  show_image_publisher.py  split_image.py  tile_image.py
jsk_teaching_object/python/jsk_teaching_object/: inference_utils.py  put_text.py  remote.py  remove_bg.py  rpn.py  take_action_client.py  take_image_photo_client.py  topic_subscriber.py  update_model_client.py
jsk_teaching_object/sample/: play.launch  sample_foreground_detection.launch  sample_foreground_detection_webcam.launch  sample_multi_euclidean_cluster_extraction.launch  sample_object_detection.launch  sample_thk_items_detection_onsight.launch
jsk_teaching_object/sample/config/: thk.rviz
jsk_teaching_object/sample/data/: play_daily.launch
jsk_teaching_object/sample/include/: play_rosbag.xml
jsk_teaching_object/scripts/: boot_soundplay.py  calc_exec.bash  calc_iou_yolo_test.py  chat.py  detect_exec.bash  eval_exec.bash  install_sample_data.py  install_trained_data.py  mux_selector.py  register_object.py  view_annotation.py  yolo_detect_test.py
train/: README.md  aug.py  data.py  generate.py  generate_data.py  labelme_utils.py  remove_bg.py  requirements.txt  run.sh
(+1054 files in other folders)
